scrollbar fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -48,7 +48,6 @@ th{
   color:#B38868;
   margin-top: 10px;
   margin-right: 10px;
-  overflow-y: hidden;
 }
 
 
